--- a/app/src/main/res/layout/activity_friends_at.xml
+++ b/app/src/main/res/layout/activity_friends_at.xml
@@ -1,10 +1,10 @@
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
- android:fitsSystemWindows="true"
+    android:fitsSystemWindows="true"
     >
 
     <android.support.v7.widget.Toolbar
@@ -13,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
+        app:theme="@style/ThemeToolbar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         >
 
         <RelativeLayout
