--- a/app/src/main/res/layout/activity_user_home.xml
+++ b/app/src/main/res/layout/activity_user_home.xml
@@ -66,7 +66,7 @@
                 android:layout_marginBottom="?attr/actionBarSize"
                 android:paddingBottom="10dp"
                 >
-                <com.dudutech.weibo.widget.LetterImageView
+                <ImageView
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_alignParentBottom="true"
@@ -114,6 +114,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
+                app:theme="@style/ThemeToolbar"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                />
 
