--- a/app/src/main/res/layout/activity_user_home.xml
+++ b/app/src/main/res/layout/activity_user_home.xml
@@ -137,11 +137,13 @@
 
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_star"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="bottom|right|end"
-        android:src="@drawable/ic_discuss"
+        android:src="@drawable/ic_star"
+        android:tint="@color/white"
         android:layout_margin="16dp"
         android:clickable="true"/>
 
