--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,7 @@
         <item name="android:windowIsTranslucent">false</item>
 
     </style>
-    <style name="AppTheme.UserHome">
+    <style name="UserHome" parent="AppTheme">
         <item name="fits_windows">true</item>
     </style>
 
