--- a/app/src/main/res/menu/menu_weibo_detail.xml
+++ b/app/src/main/res/menu/menu_weibo_detail.xml
@@ -10,6 +10,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.dudutech.biu.ui.timeline.WeiboDetailActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/action_favo" android:title="@string/favo"
+        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_copy" android:title="@string/copy"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
