--- a/app/src/main/res/layout/activity_weibo_detail.xml
+++ b/app/src/main/res/layout/activity_weibo_detail.xml
@@ -11,7 +11,7 @@
         android:id="@+id/main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="?attr/fits_windows"
+
         >
 
         <android.support.design.widget.AppBarLayout
@@ -19,23 +19,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:fitsSystemWindows="?attr/fits_windows">
+            >
 
             <android.support.design.widget.CollapsingToolbarLayout
                 android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                android:fitsSystemWindows="?attr/fits_windows"
+
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleMarginStart="48dp"
                 app:expandedTitleMarginEnd="64dp">
+
+
 
                 <include
                     layout="@layout/item_weibo_detail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="?attr/actionBarSize"
                     app:layout_collapseMode="parallax"
+
                     >
 
                 </include>
@@ -47,9 +51,14 @@
                     app:theme="@style/ThemeToolbar"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
 
+
                     />
 
+
             </android.support.design.widget.CollapsingToolbarLayout>
+
+
+
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
