--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,6 +52,11 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="txt_main_content_white">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
     <style name="txt_menu">
         <item name="android:textColor">@drawable/menu_txt_color_selector</item>
         <item name="android:textSize">15sp</item>
