--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -40,10 +40,10 @@
 
     <dimen name="detail_backdrop_height">256dp</dimen>
 
-    <dimen name="flexible_space_image_height">240dp</dimen>
+    <!--<dimen name="flexible_space_image_height">240dp</dimen>-->
 
     <dimen name="margin_standard">16dp</dimen>
 
     <dimen name="tab_height">48dp</dimen>
-
+    <dimen name="toolbar_elevation">4dp</dimen>
 </resources>
