--- a/app/src/main/res/layout/activity_web_login.xml
+++ b/app/src/main/res/layout/activity_web_login.xml
@@ -17,16 +17,28 @@
 * You should have received a copy of the GNU General Public License
 * along with BlackLight.  If not, see <http://www.gnu.org/licenses/>.
 -->
-<RelativeLayout
+<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:fitsSystemWindows="true"
+	android:orientation="vertical"
+	>
+	<android.support.v7.widget.Toolbar
+		android:id="@+id/toolbar"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:background="?attr/colorPrimary"
+		android:minHeight="?attr/actionBarSize"
+		app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
+		app:theme="@style/ThemeToolbar">
+	</android.support.v7.widget.Toolbar>
 
 	<WebView
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
-
 		android:id="@+id/wb_login"/>
 	
-</RelativeLayout>
+</LinearLayout>
 
