--- a/app/src/main/res/layout/fragment_comment_me.xml
+++ b/app/src/main/res/layout/fragment_comment_me.xml
@@ -17,7 +17,7 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/base"
+        style="@style/CustomTabLayout"
         />
 
     <android.support.v4.view.ViewPager
