--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,18 @@
         <item name="actionMenuTextColor">@color/white</item>
     </style>
 
+    <style name="CustomTabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabSelectedTextColor">@color/white</item>
+        <item name="tabIndicatorColor">@color/white</item>
+        <item name="tabIndicatorHeight">4dp</item>
+        <item name="tabTextAppearance">@style/TabTextAppearance</item>
+
+    </style>
+
+    <style name="TabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textColor">@color/txt_remark</item>
+
+    </style>
     <style name="AppTheme" parent="AppBaseTheme">
 
     </style>
@@ -98,4 +110,6 @@
         <item name="android:textColor">@color/base</item>
         <item name="android:textSize">14sp</item>
     </style>
+
+
 </resources>
