--- a/app/src/main/res/layout/activity_friends_at.xml
+++ b/app/src/main/res/layout/activity_friends_at.xml
@@ -25,7 +25,7 @@
             android:id="@+id/btn_done"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_done"
+            android:src="@mipmap/ic_done"
             android:layout_alignParentRight="true"
             android:background="@null"
             android:layout_centerVertical="true"
