--- a/app/src/main/res/layout/fragment_drawer.xml
+++ b/app/src/main/res/layout/fragment_drawer.xml
@@ -69,7 +69,7 @@
 			<ImageView
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:src="@drawable/ic_dashboard"
+				android:src="@mipmap/ic_dashboard"
 				android:layout_gravity="center_vertical"
 				android:tint="?attr/MenuIconTint"
 				/>
@@ -98,7 +98,7 @@
 			<ImageView
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:src="@drawable/ic_forum"
+				android:src="@mipmap/ic_forum"
 				android:layout_gravity="center_vertical"
 				android:tint="?attr/MenuIconTint"
 
@@ -127,7 +127,7 @@
 			<ImageView
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:src="@drawable/ic_star"
+				android:src="@mipmap/ic_star"
 				android:layout_gravity="center_vertical"
 				android:tint="?attr/MenuIconTint"
 
