--- a/app/src/main/res/layout/item_weibo_repost.xml
+++ b/app/src/main/res/layout/item_weibo_repost.xml
@@ -31,7 +31,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_weibo_repost"
+            android:background="@mipmap/bg_weibo_repost"
             android:layout_marginTop="5dp"
             android:paddingLeft="@dimen/SmallPadding"
             android:paddingRight="@dimen/SmallPadding"
@@ -88,7 +88,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:focusable="false"
-                    android:src="@drawable/ic_comment_full"
+                    android:src="@mipmap/ic_comment_full"
 
                     />
 
@@ -125,7 +125,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="15dp"
                     android:focusable="false"
-                    android:src="@drawable/ic_moment_like_full"
+                    android:src="@mipmap/ic_moment_like_full"
 
                     />
 
@@ -153,7 +153,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:focusable="false"
-                    android:src="@drawable/ic_moment_repost_full" />
+                    android:src="@mipmap/ic_moment_repost_full" />
 
                 <TextView
                     android:id="@+id/tv_repost_count"
