--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -245,44 +245,15 @@
     <color name="chat_notify">#666666</color>
     <color name="line_gray">#bcbcbc</color>
 
-    <!-- twitter -->
-    <color name="twitter_share_title_color">#333333</color>
-    <color name="twitter_share_content_color">#787878</color>
-    <color name="twitter_share_url_color">#a6a6a6</color>
+
 
     <!-- sticker panel -->
 
 
      <color name="pager_tab_indicate_color">#646ddc</color>
 
-    <!-- 魅力值 -->
-    <color name="charm_select_txt">#eaeaea</color>
-    <color name="charm_unselect_txt">#767aa4</color>
 
-    <!-- 二维码 -->
-    <color name="qr_scanner_box">#C3CAFF</color>
 
-    <!-- zxing相关 -->
-    <color name="contents_text">#ff000000</color>
-    <color name="encode_view">#ffffffff</color>
-    <color name="help_button_view">#ffcccccc</color>
-    <color name="help_view">#ff404040</color>
-    <color name="possible_result_points">#c0ffff00</color>
-    <color name="result_image_border">#ffffffff</color>
-    <color name="result_minor_text">#ffc0c0c0</color>
-    <color name="result_points">#c000ff00</color>
-    <color name="result_text">#ffffffff</color>
-    <color name="sbc_header_text">#ff808080</color>
-    <color name="sbc_header_view">#ffffffff</color>
-    <color name="sbc_list_item">#fffff0e0</color>
-    <color name="sbc_layout_view">#ffffffff</color>
-    <color name="sbc_page_number_text">#ff000000</color>
-    <color name="sbc_snippet_text">#ff4b4b4b</color>
-    <color name="share_text">#ff000000</color>
-    <color name="status_text">#ffffffff</color>
-    <color name="viewfinder_frame">#ff000000</color>
-    <color name="viewfinder_laser">#ffff0000</color>
-    <color name="viewfinder_mask">#60000000</color>
 
     <!-- browser more function bg -->
     <color name="browser_more_function_bg">#e1e1e1</color>
@@ -304,5 +275,8 @@
 
     <color name="star_color">#FF5252</color>
 
-    <color name="accent">#eeff41</color>
+    <color name="half_black">#808080</color>
+    <color name="white_normal">#fafafa</color>
+    <color name="white_pressed">#f1f1f1</color>
+    <color name="black_semi_transparent">#B2000000</color>
 </resources>
