--- a/app/src/main/res/layout/activity_pics.xml
+++ b/app/src/main/res/layout/activity_pics.xml
@@ -11,7 +11,7 @@
     >
     <!-- #3b3b3b -->
     <uk.co.senab.photoview.HackyViewPager
-        android:id="@+id/viewPager"
+        android:id="@+id/viewPager_pics"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
 
@@ -43,7 +43,7 @@
         android:layout_marginEnd="16dp">
 
         <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/action_a"
+            android:id="@+id/action_ori_photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             fab:fab_colorNormal="@color/white"
@@ -52,7 +52,7 @@
             />
 
         <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/action_b"
+            android:id="@+id/action_save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             fab:fab_colorNormal="@color/white"
