--- a/app/src/main/res/drawable/btn_moment_delete_selector.xml
+++ b/app/src/main/res/drawable/btn_moment_delete_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:state_enabled="true" android:state_pressed="false" android:drawable="@mipmap/ic_moment_delete_nor" />
-	<item android:state_enabled="true" android:state_pressed="true" android:drawable="@mipmap/ic_moment_delete_hl"/>
+	<item android:state_enabled="true" android:state_pressed="false" android:drawable="@mipmap/ic_delete_nor" />
+	<item android:state_enabled="true" android:state_pressed="true" android:drawable="@mipmap/ic_delete_hl"/>
 </selector>
