--- a/app/src/main/res/layout/item_weibo_repost.xml
+++ b/app/src/main/res/layout/item_weibo_repost.xml
@@ -124,7 +124,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="15dp"
                     android:focusable="false"
-                    android:src="@mipmap/ic_moment_like_full"
+                    android:src="@mipmap/ic_like_full"
 
                     />
 
@@ -152,7 +152,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:focusable="false"
-                    android:src="@mipmap/ic_moment_repost_full" />
+                    android:src="@mipmap/ic_repost_full" />
 
                 <TextView
                     android:id="@+id/tv_repost_count"
