--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -279,4 +279,8 @@
     <color name="white_normal">#fafafa</color>
     <color name="white_pressed">#f1f1f1</color>
     <color name="black_semi_transparent">#B2000000</color>
+
+    <color name="gray_de">#666666</color>
+    <color name="list_item_press">#216b74ff</color>
+
 </resources>
